--- a/front/package.json
+++ b/front/package.json
@@ -14,9 +14,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
     "chokidar-cli": "^3.0.0",
     "sass": "^1.86.3",
-    "vite": "^6.2.0"
+    "typescript": "^5.8.3",
+    "vite": "^6.2.0",
+    "vue-tsc": "^2.2.10"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.9.5"
