--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "dev:build": "chokidar 'src/**/*' -c 'vite build'"
   },
   "dependencies": {
+    "oxlint": "^1.1.0",
+    "vite-plugin-oxlint": "^1.3.3",
     "vue": "^3.5.13"
   },
   "devDependencies": {
