--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -6,9 +6,9 @@ on:
 
 env:
   GHCR_REGISTRY: ghcr.io
-  GHCR_API_IMAGE: ghcr.io/${{ secrets.GHCR_USER }}/skills2025-api
-  GHCR_FRONT_IMAGE: ghcr.io/${{ secrets.GHCR_USER }}/skills2025-front
-  GHCR_NGINX_IMAGE: ghcr.io/${{ secrets.GHCR_USER }}/skills2025-nginx
+  GHCR_API_IMAGE: ghcr.io/${{ secrets.REGISTRY_USER }}/skills2025-api
+  GHCR_FRONT_IMAGE: ghcr.io/${{ secrets.REGISTRY_USER }}/skills2025-front
+  GHCR_NGINX_IMAGE: ghcr.io/${{ secrets.REGISTRY_USER }}/skills2025-nginx
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 🔐 Login to GHCR
-        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ secrets.GHCR_USER }} --password-stdin
+        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} --password-stdin
 
   #     - name: 🛠️ Build & Push API
   #       run: |
@@ -59,7 +59,7 @@ jobs:
       # - name: 🚀 Pull Images & Restart Docker
       #   run: |
       #     ssh -o StrictHostKeyChecking=no ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} << EOF
-      #       echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ secrets.GHCR_USER }} --password-stdin
+      #       echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} --password-stdin
       #       docker pull $GHCR_API_IMAGE:latest
       #       docker pull $GHCR_FRONT_IMAGE:latest
       #       cd /home/${{ secrets.PROD_SSH_USER }}/skills2025
