--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -11,7 +11,7 @@ env:
   GHCR_NGINX_IMAGE: ghcr.io/${{ secrets.REGISTRY_USER }}/skills2025-nginx
 
 jobs:
-  build:
+  build-and-push:
     name: 🏗️ Build & Push Images
     runs-on: ubuntu-latest
     steps:
@@ -36,32 +36,35 @@ jobs:
           docker build -t $GHCR_NGINX_IMAGE:latest -f ./docker/nginx/Dockerfile ./nginx
           docker push $GHCR_NGINX_IMAGE:latest
 
-  # deploy:
-  #   name: 🚀 Deploy to Production Server
-  #   runs-on: ubuntu-latest
-  #   needs: build-and-push
-  #   steps:
-  #     - name: 🔐 Setup SSH
-  #       uses: webfactory/ssh-agent@v0.9.0
-  #       with:
-  #         ssh-private-key: ${{ secrets.PROD_SSH_KEY }}
+  deploy:
+    name: 🚀 Deploy to Production Server
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: 🔐 Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.PROD_SSH_KEY }}
 
-  #     - name: 📄 Envoyer .env.prod sur le serveur
-  #       run: |
-  #         ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} "mkdir -p ~/skills2025"
-  #         cat <<EOF | ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} "cat > ~/skills2025/.env.prod"
+    #   - name: 📄 Envoyer .env.prod sur le serveur
+    #     run: |
+    #       ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} "mkdir -p ~/skills2025"
+    #       cat <<EOF | ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} "cat > ~/skills2025/.env.prod"
+
 # MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}
 # MYSQL_USER=skillsuser
 # MYSQL_PASSWORD=skillsPass
 # MYSQL_DATABASE=skillsdb
 # EOF
 
-      # - name: 🚀 Pull Images & Restart Docker
-      #   run: |
-      #     ssh -o StrictHostKeyChecking=no ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} << EOF
-      #       echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} --password-stdin
-      #       docker pull $GHCR_API_IMAGE:latest
-      #       docker pull $GHCR_FRONT_IMAGE:latest
-      #       cd /home/${{ secrets.PROD_SSH_USER }}/skills2025
-      #       docker compose -f docker-compose.prod.yml up -d
-      #     EOF
+      - name: 🚀 Pull Images & Restart Docker
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} << EOF
+          echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} --password-stdin
+          docker pull $GHCR_NGINX_IMAGE:latest
+          cd /home/${{ secrets.PROD_SSH_USER }}/www/skills2025
+          docker compose -f docker-compose.prod.yml up -d
+          EOF
+
+# docker pull $GHCR_API_IMAGE:latest
+# docker pull $GHCR_FRONT_IMAGE:latest
