--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -41,6 +41,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
+      - name: 🧾 Checkout
+        uses: actions/checkout@v3
+        
       - name: 🔐 Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
