test github actions build&deploy #22

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -20,6 +20,7 @@ jobs:
           # context: ./front
       - run: | 
           cd front
+          npm install
           npm run build
           docker build -t $GHCR_FRONT_IMAGE ./public
           docker push $GHCR_FRONT_IMAGE
