--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -15,8 +15,6 @@ jobs:
       run: 
         working-directory: ./front
 
-# permissions: 
-# packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -48,6 +46,16 @@ jobs:
         with:
           name: front-artifact
           path: ./front/public
+      - name: Login GHCR 
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+      - name: Build Docker Image 
+        run: | 
+          docker build -t skills2025_front:latest -f ./docker/front/Dockerfile ./front/public
+          docker push skills2025_front:latest
       - name: Déployer sur le PS
         run: | 
           eval $(ssh-agent -s)
@@ -57,6 +65,22 @@ jobs:
           scp -r ./front/public/. ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:~/www/skills2025
 # ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} "cd /var/www/html"
 
+  nginx_deploy:
+    name: Deploy Nginx
+    needs: front_deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Déployer Nginx sur le PS
+        run: | 
+          eval $(ssh-agent -s)
+          ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
+          scp ./nginx/nginx.conf ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:/etc/nginx/sites-available/skills2025.conf
+          ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} "sudo ln -s /etc/nginx/sites-available/skills2025.conf /etc/nginx/sites-enabled/skills2025.conf && sudo systemctl reload nginx"
+# scp ./nginx/nginx.conf ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:/etc/nginx/sites-available/skills2025.conf
 
 # with: 
 # context: ./front
