test github actions build&deploy #34

--- a/docker/front/Dockerfile-CI
+++ b/docker/front/Dockerfile-CI
@@ -3,7 +3,7 @@ FROM node:18-alpine as build
 # WORKDIR /app
 WORKDIR /var/www/html
 
-COPY package.json package-lock.json ./
+COPY ./front/package.json package-lock.json ./
 
 # COPY ./ ./
 
