--- a/docker/front/Dockerfile-CI
+++ b/docker/front/Dockerfile-CI
@@ -1,13 +1,15 @@
-FROM node:18-alpine as build
+FROM node:20-alpine AS build
 
 # WORKDIR /app
-WORKDIR /var/www/html
+# WORKDIR /
+# COPY package*.json ./
 
-COPY ./front/package.json package-lock.json ./
+# COPY ./front/package.json package-lock.json ./
+# COPY --from=build /front/public /usr/share/nginx/html
 
 # COPY ./ ./
 
-RUN npm ci
+# RUN npm ci
 
 # RUN npm run dev
 
