--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -86,6 +86,32 @@ jobs:
       #   run: | 
       #     docker pull ghcr.io/${{ secrets.REGISTRY_USER }}/skills2025_front:latest
 
+  api_deploy:
+    name: Deploy API
+    needs: api_build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Login GHCR 
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+      # - name: Pull Docker image
+      #   run: | 
+      #     docker pull ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:latest
+      - name: Pull API Docker image on server
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} \
+            "docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} -p ${{ secrets.REGISTRY_TOKEN }} && \
+            docker pull ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:latest"
+
   nginx_deploy:
     name: Deploy Nginx
     needs: front_deploy
