--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -7,6 +7,7 @@ on:
 env:
   GHCR_FRONT_IMAGE: skills2025/front
   GHCR_API_IMAGE: skills2025/api
+  GHCR_NGINX_IMAGE: skills2025/nginx
 
 jobs:
   front_build:
@@ -33,6 +34,19 @@ jobs:
           name: front-artifact
           path: ./front/public
           retention-days: 1
+      # - name: Login GHCR 
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ secrets.REGISTRY_USER }}
+      #     password: ${{ secrets.REGISTRY_TOKEN }}
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: ./front/public
+      #     file: ./docker/front/Dockerfile-CI
+      #     push: true
+      #     tags: ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_FRONT_IMAGE }}:latest
 
   api_build:
     name: Build API
@@ -75,7 +89,7 @@ jobs:
           ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
-          # scp -r ./front/public/. ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:~/www/
+          # scp -r ./front/public/. ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }}:~/www/front/
       # - name: Login GHCR 
       #   uses: docker/login-action@v3
       #   with:
@@ -112,15 +126,65 @@ jobs:
             "docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} -p ${{ secrets.REGISTRY_TOKEN }} && \
             docker pull ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_API_IMAGE }}:latest"
 
+  nginx_build:
+    name: Build Nginx
+    runs-on: ubuntu-latest
+    defaults:
+      run: 
+        working-directory: ./nginx
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Login GHCR 
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.REGISTRY_USER }}
+          password: ${{ secrets.REGISTRY_TOKEN }}
+      - name: Nginx conf file
+        run: |
+          mv "nginx-prod.conf" "nginx.conf"
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./nginx
+          file: ./docker/nginx/Dockerfile-CI
+          push: true
+          tags: ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_NGINX_IMAGE }}:latest
+  
   nginx_deploy:
     name: Deploy Nginx
-    needs: front_deploy
+    needs: [front_deploy, api_deploy]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Déployer Nginx sur le PS
-        run: echo "ok"
+      # - name: Déployer Nginx sur le PS
+      #   run: echo "ok"
+      - name: Pull Nginx Docker image on server
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} \
+            "docker login ghcr.io -u ${{ secrets.REGISTRY_USER }} -p ${{ secrets.REGISTRY_TOKEN }} && \
+            docker pull ghcr.io/${{ secrets.REGISTRY_USER }}/${{ env.GHCR_NGINX_IMAGE }}:latest"
+
+  run_docker:
+    name: (Re)Run Docker
+    runs-on: ubuntu-latest
+    steps:
+      - name : docker cmd
+        run: |
+          eval $(ssh-agent -s)
+          ssh-add - <<< "${{ secrets.PROD_SSH_KEY }}"
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.PROD_SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh ${{ secrets.PROD_SSH_USER }}@${{ secrets.PROD_SSH_HOST }} \
+            docker compose down && docker compose up -d
+  #   needs: [nginx_deploy]
+    # runs-on: ubuntu-latest
       
 # run: | 
 # eval $(ssh-agent -s)
