--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -9,24 +9,24 @@
 #     ...
 
 services:
-  # api:
-  #   container_name: skills2025_api
-  #   image: myregistry/api:latest
-  #   environment:
-  #     PUID: 1000
-  #     PGID: 1000
-  #     APP_ENV: dev
+  api:
+    # container_name: skills2025_api
+    image: skills2025/api:latest
+    environment:
+      PUID: 1000
+      PGID: 1000
+      APP_ENV: prod
   #   build:
   #     context: ./api
   #     dockerfile: ../docker/api/Dockerfile
-  #   volumes:
-  #     - ./api:/var/www/api
-  #   networks:
-  #     - skills2025_network
-  #   expose:
-  #     - "9000"
-  #   depends_on:
-  #     - mysql
+    volumes:
+      - ./api:/var/www/api
+    networks:
+      - bentoweb_network
+    expose:
+      - "9000"
+    depends_on:
+      - mysql
 
   # front:
   #   container_name: skills2025_front
@@ -44,7 +44,7 @@ services:
   #     SHELL: /bin/ash # Fix chokidar-cli error
   #   restart: unless-stopped
   #   networks:
-  #     - skills2025_network
+  #     - bentoweb_network
   #   ports:
   #     - "3000:3000"
 
@@ -54,27 +54,27 @@ services:
     container_name: skills2025_nginx
     volumes:
       #   - ./api:/var/www/api
-      #   - ./front:/var/www/html
+      - /var/www/front:/var/www/front
       - ./nginx:/etc/nginx
     networks:
-      - skills2025_network
+      - bentoweb_network
     ports:
       - "80:80"
       - "443:443"
-# depends_on:
-#   - api
-#   - front
+    depends_on:
+      - api
+      # - front
 
-# mysql:
-#   image: mysql:8.0
-#   restart: always
-#   environment:
-#     MYSQL_DATABASE: skills2025
-#     MYSQL_USER: myuser
-#     MYSQL_PASSWORD: mypassword
-#     MYSQL_ROOT_PASSWORD: rootpassword
-#   volumes:
-#     - db_data:/var/lib/mysql
+  mysql:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_DATABASE: skills2025
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
+      MYSQL_ROOT_PASSWORD: rootpassword
+    volumes:
+      - db_data:/var/lib/mysql
 
 # phpmyadmin:
 #   image: phpmyadmin:5.2.1
@@ -89,10 +89,10 @@ services:
 #   depends_on:
 #     - mysql
 #   networks:
-#     - skills2025_network
+#     - bentoweb_network
 
 networks:
-  skills2025_network:
+  bentoweb_network:
     driver: bridge
 
 volumes:
