--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -27,20 +27,20 @@ http {
         listen 443 ssl default_server;
         server_name _;
 
-        ssl_certificate /etc/nginx/ssl/skills2025.local.crt;
-        ssl_certificate_key /etc/nginx/ssl/skills2025.local.key;
+        ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
 
         return 404;
     }
 
     server {
         listen 443 ssl;
-        server_name skills2025.local;
+        server_name bentoweb.fr;
 
-        ssl_certificate /etc/nginx/ssl/skills2025.local.crt;
-        ssl_certificate_key /etc/nginx/ssl/skills2025.local.key;
+        ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
 
-        root /var/www/front/public;
+        root /var/www/front;
         index index.html;
 
         location / {
@@ -51,10 +51,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name api.skills2025.local;
+        server_name api.bentoweb.fr;
 
-        ssl_certificate /etc/nginx/ssl/skills2025.local.crt;
-        ssl_certificate_key /etc/nginx/ssl/skills2025.local.key;
+        ssl_certificate /etc/letsencrypt/live/bentoweb.fr/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/bentoweb.fr/privkey.pem;
 
         root /var/www/api/public;
         index index.php index.html index.htm;
